use vw unit, update readme, minify css

--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <meta name="description" content="Flexible, responsive, mobile-first CSS framework using Less">
     <meta name="keywords" content="css,less,framework,flexbox,responsive">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="normalize.css">
-    <link rel="stylesheet" href="prefixed-prelude.css">
-    <link rel="stylesheet" href="docs.css">
+    <link rel="stylesheet" href="normalize.min.css">
+    <link rel="stylesheet" href="prefixed-prelude.min.css">
+    <link rel="stylesheet" href="docs.min.css">
   </head>
   <body>
     <pre><code>&lt;div class="grid-row">
