--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta http-equiv="x-ua-compatible" content="IE=edge">
     <title>Prelude &middot; Flexible, responsive, mobile-first CSS framework using Less</title>
     <meta name="description" content="Flexible, responsive, mobile-first CSS framework using Less">
     <meta name="keywords" content="css,less,framework,flexbox,responsive">
